# Socket-Application

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
apps/socket_client_app/: CMakeLists.txt  Makefile  TCP_CLIENT  cmake_install.cmake
apps/socket_client_app/src/: main.c
apps/socket_server_app/: CMakeLists.txt  Makefile  TCP_SERVER  cmake_install.cmake
apps/socket_server_app/include/: main.h
apps/socket_server_app/src/: main.c
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/tcp_client/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/tcp_client/src/: tcp_client.c
lib/tcp_server/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/tcp_server/include/: tcp_server.h
lib/tcp_server/src/: tcp_server.c
